My blog's second commit

--- a/blog_posts/post10.html
+++ b/blog_posts/post10.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Welcome to MyBlog - Full Post</title>
+    <title>Tenth Post - Full Post</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../blog.css" />
+    <link rel="stylesheet" href="blog.css" />
 </head>
 <body>
     <header>
@@ -13,18 +13,18 @@
             <h1>MyBlog</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="../index.html#home">Home</a></li>
+                    <li><a href="../index.html#about">About</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <div class="container">
-            <h2>Welcome to MyBlog</h2>
-            <p class="date">October 10, 2023</p>
-            <p>This is the full content of the first post on my blog. Welcome! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec diam nec nulla dapibus convallis. Integer at libero nec nulla cursus tincidunt.</p>
+            <h2>Tenth Post</h2>
+            <p class="date">October 19, 2023</p>
+            <p>This is the full content of the tenth post on my blog. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec diam nec nulla dapibus convallis. Integer at libero nec nulla cursus tincidunt.</p>
             <p>More detailed content can be added here to expand on the blog post topic. Vivamus luctus, nunc at convallis cursus, sapien lorem dapibus lorem, a tincidunt lorem lorem nec lorem.</p>
         </div>
     </main>
