--- a/blog_posts/post5.html
+++ b/blog_posts/post5.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fifth Post - Full Post</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../blog.css" />
 </head>
 <body>
     <header>
@@ -25,6 +26,7 @@
             <p class="date">October 14, 2023</p>
             <p>This is the full content of the fifth post. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
             <p>Additional paragraphs can be added here to provide more information and insights on the topic discussed in this post.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non consequuntur aut nemo tempora hic alias eaque possimus? Rerum iste itaque dolor odio eaque, hic dignissimos consectetur, laboriosam illo facere, autem est! Dicta nam magnam officia! Quidem dolore blanditiis quasi ex obcaecati nobis cum corrupti reiciendis tempore ab eius quas necessitatibus, autem atque in accusantium fuga quisquam voluptate. Dolor nemo error aliquid, porro fuga deserunt ex, quos repudiandae dolore officiis et nam, ullam quas quidem dignissimos! Maiores nobis corrupti dolores beatae minima, sed aut fugiat debitis nemo quisquam unde ipsa iure doloremque, expedita optio? Esse itaque vero animi libero possimus nam dolores nesciunt provident saepe suscipit distinctio, sed repellendus impedit sit placeat, asperiores hic quas ex odit aliquid eaque maxime. Odio beatae quo aut voluptate laudantium quisquam ab. Aliquid nesciunt officia in, eos facilis sunt! Culpa provident eligendi deserunt, cum consectetur laudantium asperiores commodi beatae. Repellendus possimus sit esse sint excepturi! Reiciendis, consequuntur facere minus pariatur ipsam, totam eaque officia quasi animi, sunt qui. Minus accusamus illum quos amet nesciunt, voluptatum distinctio at quasi repellat porro magnam? Laborum aut et enim ducimus excepturi quisquam facilis hic! Est excepturi cumque molestiae saepe tempore, quaerat quisquam. Harum inventore, ipsam, perferendis quod quidem natus quos excepturi porro optio ut fuga earum eveniet temporibus. Ab eius labore adipisci sint eos laborum provident, distinctio quaerat laudantium explicabo esse nesciunt assumenda ipsa rem vero repellendus ex quae quod quidem quasi laboriosam veritatis? Cumque, magnam error vitae, eius, asperiores doloribus qui porro saepe molestias libero iusto aliquid ipsam.</p>
         </div>
     </main>
     <footer>
