--- a/blog_posts/post2.html
+++ b/blog_posts/post2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Second Post - Full Post</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../blog.css" />
 </head>
 <body>
     <header>
